--- a/250306_TankDefense/250306_TankDefense.vcxproj.filters
+++ b/250306_TankDefense/250306_TankDefense.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClInclude Include="Tank.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="CommonFunction.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Missile.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -48,6 +54,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Tank.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Missile.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
