--- a/250306_TankDefense/250306_TankDefense.vcxproj.filters
+++ b/250306_TankDefense/250306_TankDefense.vcxproj.filters
@@ -42,6 +42,18 @@
     <ClInclude Include="Missile.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="MissileLoader.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Enumy.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="EnumyGroup.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="VariantMissile.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -57,6 +69,18 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Missile.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="MissileLoader.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Enumy.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="EnumyGroup.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="VariantMissile.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
